--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   s1:
-    build: service1
+    build: services/service1
     container_name: service1
     image: thegreatgamma/avl-task:s1
     networks: 
@@ -9,7 +9,7 @@ services:
     ports:
       - 8080:8080
   s2:
-      build: service2
+      build: services/service2
       container_name: service2
       image: thegreatgamma/avl-task:s2
       networks: 
